[tool.poetry]
name = "entsopy"
version = "0.1.0"
description = "Cli tools for ENTSO-e data retrival"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.scripts]
quizli = "entsopy.main:app"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
matplotlib = "^3.8.2"
typer = {extras = ["all"], version = "^0.9.0"}
pandas = "^2.1.3"
lxml = "^4.9.3"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
